added unit test for invalid input 'surname' during update by name to not saving to file